# WarGameVis

./: CMakeLists.txt  README.md  data.h  data_producer.h  data_producer_multi.h  glad.c  main.cpp  newmain  ortho_camera.h  render.cpp  render.h
data/: data.json  unit_info_0.json  unit_info_1.json  unit_info_10.json  unit_info_11.json  unit_info_12.json  unit_info_13.json  unit_info_14.json  unit_info_15.json  unit_info_16.json  unit_info_17.json  unit_info_18.json  unit_info_19.json  unit_info_2.json  unit_info_20.json  unit_info_21.json  unit_info_22.json  unit_info_23.json  unit_info_24.json  unit_info_25.json  unit_info_26.json  unit_info_27.json  unit_info_28.json  unit_info_29.json  unit_info_3.json  unit_info_30.json  unit_info_31.json  unit_info_32.json  unit_info_33.json  unit_info_34.json  unit_info_35.json  unit_info_36.json  unit_info_37.json  unit_info_38.json  unit_info_39.json  unit_info_4.json  unit_info_40.json  unit_info_41.json  unit_info_42.json  unit_info_43.json  (+11 more)
data1/: unit_info_0.json  unit_info_1.json  unit_info_10.json  unit_info_11.json  unit_info_12.json  unit_info_13.json  unit_info_14.json  unit_info_15.json  unit_info_16.json  unit_info_17.json  unit_info_18.json  unit_info_19.json  unit_info_2.json  unit_info_20.json  unit_info_21.json  unit_info_22.json  unit_info_23.json  unit_info_24.json  unit_info_25.json  unit_info_26.json  unit_info_27.json  unit_info_28.json  unit_info_29.json  unit_info_3.json  unit_info_30.json  unit_info_31.json  unit_info_32.json  unit_info_33.json  unit_info_34.json  unit_info_35.json  unit_info_36.json  (+19 more)
(+3 files in other folders)
